<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/puText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textColor="#88000000"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="PROFILE PANEL" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:hint="Name"
            android:textColor="#ffffff"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >


        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:hint="Age"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/gender_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_text_view" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/gender_female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female_button" />

            <RadioButton
                android:id="@+id/gender_male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male_button" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Spinner
            android:id="@+id/deptt_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/deptt_arrays"
            android:prompt="@string/deptt_prompt"
            android:padding="10dp"
            android:layout_alignParentTop="true" />
        <Spinner
            android:id="@+id/branch_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/deptt_selector"
            android:entries="@array/branch_arrays"
            android:prompt="@string/branch_prompt"
            android:padding="10dp"
        	 />
        <Spinner
            android:id="@+id/sem_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/branch_selector"
            android:entries="@array/sem_arrays"
            android:prompt="@string/sem_prompt"
            android:padding="10dp"
        	 />

    </RelativeLayout>
     </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text=""
            android:textSize="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="saveUserProfile"
            android:background="@drawable/enter_button_selector"
            android:padding="10dp"
            android:textColor="#88000000"
			android:textStyle="bold"
            android:text="Save Profile" />

    </RelativeLayout>

</LinearLayout>